objects/Product2.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedOn__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeRules__c</fullName>
        <label>Attribute Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributesMarkupConfig__c</fullName>
        <description>Fulfillment Behavior</description>
        <inlineHelpText>Fulfillment Behavior</inlineHelpText>
        <label>Fulfillment Behavior</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryData__c</fullName>
        <description>Data about the Catalogs/Categories that this product belongs to, stored in JSON format.</description>
        <label>Category Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChangeDetectorImplementation__c</fullName>
        <description>Name of an implementation (e.g. an Apex class) which will be used by Change Detector functionality in Vlocity Order Management.</description>
        <inlineHelpText>Name of implementation which will be used by Change Detector in XOM</inlineHelpText>
        <label>ChangeDetectorImplementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For product spec and commercial offer types of records, identifies the class of this product spec or offer.</description>
        <label>Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Class)</relationshipLabel>
        <relationshipName>ClassProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultImageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default image associated with this product.</description>
        <label>Default Image</label>
        <referenceTo>vlocity_cmt__VlocityAttachment__c</referenceTo>
        <relationshipLabel>Product Default Image</relationshipLabel>
        <relationshipName>ProductDefaultImage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <description>This date will be deprecated soon. Please use Selling Start Date instead.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <description>This date will be deprecated soon. Please use Selling End Date instead.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndOfLifeDate__c</fullName>
        <description>This datetime sets product life to end after which it is not expected to support/order/maintain.</description>
        <label>End of Life Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStartDate__c</fullName>
        <description>This datetime determines when the product can be fulfilled in orders, opportunities or quotes.</description>
        <label>Fulfilment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalGroupKey__c</fullName>
        <description>Represents a common identifier shared by different versions of the same Product.</description>
        <label>Version Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product. Used to identify the Product across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique product identifier can be used.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HeaderData__c</fullName>
        <description>Stores the headers for Matrix is stored as a JSON.</description>
        <inlineHelpText>Stores the headers for Matrix is stored as a JSON.</inlineHelpText>
        <label>Header Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImageId__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsCustomerSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that each asset instance of this product should be considered a distinct customer subscription. Customer subscriptions are intended to be tracked as a materialized record in the Subscription object.</description>
        <label>Is Customer Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the product is one that can be ordered directly. (It does not mean that this product could not be acquired as a component of another product.)</description>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing a denormalized representation of the product&apos;s Vlocity Attribute values and configuration metadata.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <description>Safety buffer before the committed date</description>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LifecycleStatus__c</fullName>
        <description>Represents the Lifecycle status of the Product. The Draft and Released status are the initial and final lifecycle status of the entity.</description>
        <label>Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Amendment Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MainFeatureQuantityUom__c</fullName>
        <description>Products main or primary feature unit of measure such as GB or minutes</description>
        <label>Main Feature Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MainFeatureQuantity__c</fullName>
        <description>Quantity of product main or primary feature e.g. 100 minutes or 64 GB</description>
        <label>Main Feature Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MainFeatureTermInDays__c</fullName>
        <description>Number of days this product is active for use from date of purchase for i.e. 30GB for 30 days</description>
        <label>Main Feature Term in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeName__c</fullName>
        <description>Formula: Name of the Object Type.</description>
        <formula>vlocity_cmt__ObjectTypeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentClassCode__c</fullName>
        <description>Product code of parent class.</description>
        <formula>vlocity_cmt__ParentClassId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For classes (Product2 records with record type Class), this identifies the parent class when this is a subclass.</description>
        <label>Parent Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subclasses</relationshipLabel>
        <relationshipName>Subclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For commercial offers, this identifies the product specification on which this offer is based.</description>
        <label>Product Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>ProductSpecOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSpecName__c</fullName>
        <description>Formula: Name of the Product Specification.</description>
        <formula>vlocity_cmt__ProductSpecId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specification Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductTemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Based on Template</relationshipLabel>
        <relationshipName>ProductTemplateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                    <default>true</default>
                    <label>Order Item</label>
                </value>
                <value>
                    <fullName>Downstream Order Item</fullName>
                </value>
                <value>
                    <fullName>Top Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SellingEndDate__c</fullName>
        <description>This datetime determines when the product can stop selling.</description>
        <label>Selling End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SellingStartDate__c</fullName>
        <description>This datetime determines when the product can start selling.</description>
        <label>Selling Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecificationSubType__c</fullName>
        <description>This field is used to configure the specification sub type of the product. Valid values are - Simple, Bundle. Null value is allowed when field is not yet configured, for backward compatibility. Default value is null.</description>
        <label>Specification Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecificationType__c</fullName>
        <description>Identifies offers versus product specs, resource specs, service specs, etc.</description>
        <label>Specification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <description>Product Sub Type can be used to drive implementations/engines, as well as filtering products in the Catalog/Pricebook. These values may be constrained by the Product Type.</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Unit Rate</fullName>
                </value>
                <value>
                    <fullName>Standing Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeToLive__c</fullName>
        <label>Time To Live</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackAsAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if product needs to be tracked as part of agreement</description>
        <label>Track As Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Product Type can be used to drive eligibility/compatibility/recommendations/other implementations.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Cost Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VendorAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Account which represents the company that produces this product or service.</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionEndDateTime__c</fullName>
        <description>Represents end date time of a product version. Version end date must be within the bounds of Selling Start date and Retirement date time.</description>
        <label>Version End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionLabel__c</fullName>
        <description>Represents user-friendly label for the versioned Product</description>
        <label>Version Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionStartDateTime__c</fullName>
        <description>Represents start date time of a product version. Version start date must be within the bounds of Selling Start date and Retirement date time.</description>
        <label>Version Start Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__ProductTemplates</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.vlocity_cmt__ProductTemplate</value>
        </filters>
        <label>Product Templates</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__Products</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.vlocity_cmt__Product</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Products</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductTemplate</fullName>
        <active>true</active>
        <label>Product Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__TermSpec</fullName>
        <active>true</active>
        <label>Term Spec</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveDate_Greater_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveDate__c  &gt;  vlocity_cmt__EndDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EndDate__c</errorDisplayField>
        <errorMessage>End Date should be greater than or equal to Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Fulfilment_Greater_EndOfLife</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__FulfilmentStartDate__c  &gt;  vlocity_cmt__EndOfLifeDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EndOfLifeDate__c</errorDisplayField>
        <errorMessage>End of Life Date should be greater than or equal to Fulfilment Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__SellingEnd_Greater_EndOfLife</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__SellingEndDate__c  &gt;  vlocity_cmt__EndOfLifeDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EndOfLifeDate__c</errorDisplayField>
        <errorMessage>End of Life Date should be greater than or equal to Selling End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__SellingEnd_Greater_Fulfilment</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__FulfilmentStartDate__c &gt; vlocity_cmt__SellingEndDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__SellingEndDate__c</errorDisplayField>
        <errorMessage>Selling End Date should be greater than or equal to Fulfilment Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__SellingStart_Greater_EndOfLife</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__SellingStartDate__c  &gt;  vlocity_cmt__EndOfLifeDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EndOfLifeDate__c</errorDisplayField>
        <errorMessage>End of Life Date should be greater than or equal to Selling Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__SellingStart_Greater_Fulfilment</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__SellingStartDate__c  &gt;  vlocity_cmt__FulfilmentStartDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__FulfilmentStartDate__c</errorDisplayField>
        <errorMessage>Fulfilment Start Date should be greater than or equal to Selling Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__SellingStart_Greater_SellingEnd</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__SellingStartDate__c  &gt;  vlocity_cmt__SellingEndDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__SellingEndDate__c</errorDisplayField>
        <errorMessage>Selling End Date should be greater than or equal to Selling Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__VersionStartDate_Greater_VersionEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__VersionStartDateTime__c  &gt;  vlocity_cmt__VersionEndDateTime__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__VersionEndDateTime__c</errorDisplayField>
        <errorMessage>Version End Date should be greater than or equal to Version Start Date.</errorMessage>
    </validationRules>
</CustomObject>